--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,6 +3,11 @@ headless = true
 enableXsrfProtection = false
 enableCORS = false
 maxUploadSize = 1028
+fileWatcherType = "none"
+runOnSave = false
 
 [browser]
 gatherUsageStats = false
+
+[global]
+developmentMode = false 
