--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ aiohttp>=3.8.0
 python-docx>=0.8.11
 reportlab>=4.0.0
 markdown>=3.5.0
+openpyxl>=3.1.0
 
 # Utilities & Configuration
 pytz>=2023.3
